src/pages/a/clock/_styles/styles.module.scss
@use '../../../../styles/units.scss' as u;

$SCREEN_WIDTH_SMALL: u.Rem(650px);

.body {
	display: flex;
	flex-direction: column;
	align-items: center;
	height: 100%;
	max-height: 100%;
}

.bodyPage {
	width: 100%;
	height: 100%;
	max-height: calc(100dvh - u.Rem(58px));

	&[hidden] {
		display: none !important;
	}
}

.bodyPageClock {
	display: flex;
	flex-direction: column;
	height: 100%;
	justify-content: center;

	> h2 {
		text-align: center;
		font-size: 10dvw;
		font-weight: bold;
		font-family: var(--g-font-family-monospace);

		@media (max-width: $SCREEN_WIDTH_SMALL) {
			font-size: 16dvw;
		}
	}

	> p {
		text-align: center;
		font-size: max(u.Rem(16px), 2dvw);
		color: rgb(var(--g-color-accent));
		font-weight: bold;
	}
}

.bodyPageStopwatch {
	display: flex;
	flex-direction: column;
	height: 100%;
	justify-content: center;

	> h2 {
		padding: u.Rem(16px) u.Rem(16px) 0 u.Rem(16px);
		text-align: center;
		font-size: 10dvw;
		font-family: var(--g-font-family-monospace);
		font-weight: bold;

		@media (max-width: $SCREEN_WIDTH_SMALL) {
			font-size: 14dvw;
		}
	}
}

.bodyPageStopwatchLaps {
	flex: 1;
	max-height: 100%;
	padding: u.Rem(0px) u.Rem(16px) u.Rem(16px) u.Rem(16px);
	width: 100%;
	display: none;
	flex-direction: column;
	align-items: center;
	overflow: auto;

	> div:first-child {
		width: u.Rem(720px);
		max-width: 100%;
		display: grid;
		position: sticky;
		top: u.Rem(0px);
		grid-template-columns: u.Rem(64px) 1fr 1fr;
		border-radius: u.Rem(4px);
		border: u.Rem(1px) solid rgb(var(--g-color-on-surface), var(--g-opacity2));
		background-color: rgb(var(--g-color-on-surface), var(--g-opacity2));
		backdrop-filter: blur(var(--g-blur-glass));

		> span {
			display: block;
			padding: u.Rem(6.5px) u.Rem(12px);
			font-size: var(--g-font-size-xs);
		}
	}

	> div:last-child {
		width: u.Rem(720px);
		max-width: 100%;

		> div {
			display: grid;
			grid-template-columns: u.Rem(64px) 1fr 1fr;
			border-radius: u.Rem(4px);

			&:first-child {
				margin-top: u.Rem(8px);
			}

			&:hover {
				background-color: rgb(var(--g-color-on-surface), var(--g-opacity2));
			}

			> span {
				display: block;
				padding: u.Rem(6.5px) u.Rem(12px);
				font-size: var(--g-font-size-xs);
			}
		}
	}
}

.bodyPageTimer {
	display: flex;
	flex-direction: column;
	height: 100%;
	justify-content: center;

	> h2 {
		text-align: center;
		font-size: 12dvw;
		font-family: var(--g-font-family-monospace);
		font-weight: bold;

		@media (max-width: $SCREEN_WIDTH_SMALL) {
			font-size: 16dvw;
		}
	}
}

.navigationSideBar {
	@media (max-width: $SCREEN_WIDTH_SMALL) {
		display: none !important;
	}
}

.smallScreenOnly {
	@media not (max-width: $SCREEN_WIDTH_SMALL) {
		display: none !important;
	}
}

